--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -4,3 +4,4 @@ remote_user = ec2-user
 private_key_file = ~/.ssh/bit-dev-key.pem
 remote_port = 22
 host_key_checking = False
+interpreter_python = auto_legacy_silent
