--- a/ansible/partitioning.yml
+++ b/ansible/partitioning.yml
@@ -1,14 +1,12 @@
 ---
-- hosts: all
+- hosts: bit-dev-elk
   become: yes
   tasks:
-  # Create and mount partition for ELK data
   - name: Install parted
     yum:
       name: parted.x86_64
       state: present 
-    
-  - name: "Add new partition on /dev/nvme1n1"
+  - name: "Add new partition on /dev/nvme1n1 for ELK data"
     parted: 
       device: /dev/nvme1n1
       number: 1
@@ -16,25 +14,19 @@
       label: gpt
       name: "ELK_data"
       state: present
-
-  - name: Create filesystem
+  - name: Create xfs filesystem
     filesystem:
       fstype: xfs
       dev: /dev/nvme1n1p1
-
-  - name: Create empty directory
+  - name: Create empty /usr/share/elk directory
     file:
       path: /usr/share/elk
       state: directory  
-
+      owner: ec2-user
+      group: ec2-user
   - name: Mount new partition
     mount:
       fstype: xfs
       src: /dev/disk/by-partlabel/ELK_data
       path: /usr/share/elk
-      state: mounted  
-
-
-
-
-      
+      state: mounted
